# Mony-trac-api

./: .env  Dockerfile  compose.yaml  pyproject.toml  run.py
app/: main.py  router_root.py
app/core/: config.py
app/db/: index.py  models.py  redis.py
app/dependencies/: categories.py  transaction.py  user_auth.py
app/email/: index.py  user_auth.py
app/email/templates/: reset_password_email.html  verify_email.html
app/routes/: balance.py  categories.py  router.py  transection.py  user_auth.py
app/routes/api/: auth.py
app/schema/: balance.py  categories.py  transection.py  user_auth.py
app/services/: balances.py  categories.py  transection.py  user_auth.py
app/util/: balance.py  categories.py  transection.py  user_auth.py
migrations/: env.py
migrations/versions/: 0c38b062cb62_fix_user.py  1ed69f6c6f0e_fix_user.py  215c842bded4_fix_timestamp_3.py  44b1039302e8_fix_timestamp_5.py  4c72750c627c_first_migrate.py  a4474feac560_first_migrate.py  a6fe622a5aea_add_type_to_transections.py  b0693606c745_first_migrate.py  b96ad96f7249_fix_timestamp.py  c6f2fc18b6a4_fix_timestamp_2.py  cb062c1f1c7d_fix_timestamp_4.py  e50cfadb7714_fix_relationship.py  f4963b739576_add_back_papulated.py  f5e502112caf_fix_relation_ship_error.py
